--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
       <div id="mainMenu">
         <h1>doodle jump</h1>
-        <h3>using HTML5,</h3>
-        <h3>...by <a href="http://twitter.com/solitarydesigns/" target="_blank">Kushagra Agarwal</a></h3>
-  			<h3>and <a href="http://twitter.com/_rishabhp" target="_blank">Rishabh</a></h3>
-
+        <h3>Awesomeness takes over by...WOOP WOOP</h3>
+        <h3>...by Ritz Carlton</h3>
+  			
         <p class="info">
           use
           <span class="key left">←</span>
